[project]
name = "pixel2liquid"
version = "0.1.0"
description = "Website core resource crawler"
requires-python = ">=3.11"
dependencies = [
    "httpx",
    "beautifulsoup4",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
